// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/page/Account/UserEmail execute the onSubmit after triggering the enter event 1`] = `
<div>
  <div
    class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="config-item-label"
      >
        <div
          class="title"
        >
          邮箱
        </div>
      </div>
    </div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        test@gmail.com
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                fill="#8A8F99"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`test base/page/Account/UserEmail should match snapshot 1`] = `
<div>
  <div
    class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="config-item-label"
      >
        <div
          class="title"
        >
          邮箱
        </div>
      </div>
    </div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        test@gmail.com
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
          hidden=""
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                fill="#8A8F99"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
